@@ -6,6 +6,8 @@
 
 * Drop support for Python 2.7, Python 3.5 and Python 3.6.
 
+* Add support for the strict document format.
+
 # 1.6.0
 
 * Support merged paragraphs when revisions are tracked.
